--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.SignUpActivity"
+    tools:context=".view.auth.SignUpActivity"
     android:background="@color/purple_main">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -30,105 +30,85 @@
         android:textColor="@color/white"
         android:fontFamily="@font/nunito_sans_bold" />
 
-    <TextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_username"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
-        android:text="@string/title_username"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="16dp"
-        android:textColor="@color/grey_hint"
-        android:fontFamily="@font/nunito_sans_light"
-        android:textSize="14sp"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_username"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/white"
         android:hint="@string/input_username"
-        android:textColorHint="@color/white"
-        android:inputType="textPersonName"/>
-
-    <TextView
-        android:id="@+id/tv_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_username"
-        android:text="@string/title_password"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/grey_hint"
-        android:fontFamily="@font/nunito_sans_light"
-        android:textSize="14sp"/>
+        android:layout_marginTop="40dp"
+        android:textColorHint="@color/white">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:backgroundTint="@android:color/transparent"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_password"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_password"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_username"
         android:hint="@string/input_password"
-        android:textColorHint="@color/white"
-        android:inputType="textPassword"/>
-
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
-        android:text="@string/title_nama"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/grey_hint"
-        android:fontFamily="@font/nunito_sans_light"
-        android:textSize="14sp"/>
+        android:layout_marginTop="20dp"
+        android:textColorHint="@color/white">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_passowrd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:backgroundTint="@android:color/transparent"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_name"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_password"
         android:hint="@string/input_nama"
-        android:textColorHint="@color/white"
-        android:inputType="textPersonName"/>
-
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
-        android:text="@string/title_email"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:textColor="@color/grey_hint"
-        android:fontFamily="@font/nunito_sans_light"
-        android:textSize="14sp"/>
+        android:layout_marginTop="40dp"
+        android:textColorHint="@color/white">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:backgroundTint="@android:color/transparent"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_email"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_email"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_name"
         android:hint="@string/input_email"
-        android:textColorHint="@color/white"
-        android:inputType="textEmailAddress"/>
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:textColorHint="@color/white">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:backgroundTint="@android:color/transparent"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
