--- a/app/src/main/res/layout/activity_sign_up_photo.xml
+++ b/app/src/main/res/layout/activity_sign_up_photo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.SignUpPhotoActivity"
+    tools:context=".view.auth.SignUpPhotoActivity"
     android:background="@color/purple_main">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -43,15 +43,28 @@
         android:textColor="@color/white"
         android:fontFamily="@font/nunito_sans_semi_bold" />
 
-    <ImageView
-        android:id="@+id/iv_photo_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/foto_empty"
+    <RelativeLayout
+        android:id="@+id/rl_imageUpload"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+        <ImageView
+            android:id="@+id/iv_photo_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/foto_empty" />
+        <ImageView
+            android:id="@+id/iv_imageSelector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_savePhoto"
