--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="grey_hint">#B4B4B4</color>
     <color name="black_text">#303030</color>
     <color name="green_main">#18A489</color>
+    <color name="white_background">#FAFAFA</color>
 </resources>
