--- a/app/src/main/res/layout/activity_select_chair.xml
+++ b/app/src/main/res/layout/activity_select_chair.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.SelectChairActivity">
+    tools:context=".view.SelectChairActivity"
+    android:background="@color/white_background">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_back"
@@ -345,7 +346,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:fontFamily="@font/nunito_sans_semi_bold" />
+        android:fontFamily="@font/nunito_sans_semi_bold"
+        android:visibility="invisible"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
