--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,16 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".view.DetailActivity"
     android:background="@color/white_background">
-
-    <ImageView
-        android:id="@+id/iv_header"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:layout_constraintTop_toTopOf="parent"
+    
+    <RelativeLayout
+        android:id="@+id/rl_header"
+        android:layout_width="0dp"
+        android:layout_height="360dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@mipmap/ic_launcher"
-        android:scaleType="fitXY"/>
+        app:layout_constraintTop_toTopOf="parent">
+        <RelativeLayout
+            android:id="@+id/rl_video"
+            android:layout_width="match_parent"
+            android:layout_height="260dp">
+            <ImageView
+                android:id="@+id/iv_header"
+                android:layout_width="match_parent"
+                android:layout_height="260dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@mipmap/ic_launcher"
+                android:scaleType="fitXY"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_play"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/shape_white_video"/>
+        </RelativeLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_poster"
+            android:layout_width="129dp"
+            android:layout_height="189dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="16dp"
+            app:cardCornerRadius="15dp">
+            <ImageView
+                android:id="@+id/iv_poster"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_launcher_background"/>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tv_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rating_film_dummy"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/nunito_sans_semi_bold"
+            android:textColor="@color/black_text"
+            android:textSize="14sp"
+            android:layout_marginEnd="16dp"
+            android:drawablePadding="8dp"
+            app:drawableStartCompat="@drawable/ic_star"
+            android:layout_below="@id/rl_video"
+            android:layout_toEndOf="@id/cv_poster"/>
+
+        <TextView
+            android:id="@+id/tv_titleFilm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_rating"
+            android:layout_toEndOf="@id/cv_poster"
+            android:text="@string/title_film_dummy_2"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/nunito_sans_semi_bold"
+            android:textColor="@color/black_text"
+            android:textSize="18sp"
+            android:maxLines="2"
+            android:ellipsize="end"/>
+
+        <TextView
+            android:id="@+id/tv_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_titleFilm"
+            android:layout_toEndOf="@id/cv_poster"
+            android:text="@string/tag_film_dummy"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:fontFamily="@font/nunito_sans_light"
+            android:textColor="@color/black_text"
+            android:textSize="12sp"
+            android:maxLines="1"
+            android:ellipsize="end"/>
+    </RelativeLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_back"
@@ -33,61 +117,19 @@
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_header"
+        app:layout_constraintTop_toBottomOf="@id/rl_header"
         app:layout_constraintBottom_toTopOf="@id/btn_selectChair">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/tv_titleFilm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/title_film_dummy"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="16dp"
-                android:fontFamily="@font/nunito_sans_semi_bold"
-                android:textColor="@color/black_text"
-                android:textSize="24sp"/>
-
-            <TextView
-                android:id="@+id/tv_tag"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_titleFilm"
-                android:text="@string/tag_film_dummy"
-                android:layout_marginTop="8dp"
-                android:layout_marginStart="16dp"
-                android:fontFamily="@font/nunito_sans_light"
-                android:textColor="@color/black_text"
-                android:textSize="14sp"/>
-
-            <TextView
-                android:id="@+id/tv_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/rating_film_dummy"
-                android:layout_marginTop="24dp"
-                android:layout_marginStart="16dp"
-                android:fontFamily="@font/nunito_sans_semi_bold"
-                android:textColor="@color/black_text"
-                android:textSize="18sp"
-                android:layout_marginEnd="16dp"
-                android:drawablePadding="8dp"
-                app:drawableStartCompat="@drawable/ic_star" />
-
-            <TextView
                 android:id="@+id/tv_titleStoryBoard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_tag"
+                app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/title_storyboard"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/nunito_sans_semi_bold"
                 android:textColor="@color/black_text"
@@ -115,7 +157,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_contentStoryBoard"
                 android:text="@string/title_who_played"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/nunito_sans_semi_bold"
                 android:textColor="@color/black_text"
