--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -55,14 +55,14 @@
             android:text="@string/title_now_playing"
             android:layout_marginTop="40dp"
             android:layout_marginStart="16dp"
-            android:fontFamily="@font/nunito_sans_regular"
+            android:fontFamily="@font/nunito_sans_bold"
             android:textColor="@color/black_text"
-            android:textSize="18sp"/>
+            android:textSize="16sp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_nowPlaying"
             android:layout_width="match_parent"
-            android:layout_height="217dp"
+            android:layout_height="236dp"
             app:layout_constraintTop_toBottomOf="@id/tv_nowPlaying"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,9 +79,9 @@
             android:text="@string/title_coming_soon"
             android:layout_marginTop="40dp"
             android:layout_marginStart="16dp"
-            android:fontFamily="@font/nunito_sans_regular"
+            android:fontFamily="@font/nunito_sans_bold"
             android:textColor="@color/black_text"
-            android:textSize="18sp"/>
+            android:textSize="16sp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_comingSoon"
