--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="black_text">#303030</color>
     <color name="green_main">#18A489</color>
     <color name="white_background">#FAFAFA</color>
+    <color name="black_60">#99000000</color>
 </resources>
